// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TranslationPackBuilder snapshots > includes only source IDs from batch, never prior-chapter dump > source-block 1`] = `
"## Source
[C000451:P000001] 李逍遥走进青云门。
[C000451:P000002] 他看见赵灵儿站在山门前。"
`;

exports[`TranslationPackBuilder snapshots > keeps balanced pack structure stable > active-terms 1`] = `
"## Locked Terms
李逍遥 → Lý Tiêu Dao (PERSON) LOCKED

## Relevant Terms
青云门 → Thanh Vân Môn (SECT)"
`;

exports[`TranslationPackBuilder snapshots > keeps balanced pack structure stable > critical-rules 1`] = `
"## Knowledge Priority
If conflict:
1. This Translation Pack explicit instruction
2. HOT MEMORY (recent SQLite changes)
3. LOCKED PROJECT TERM
4. SERIES glossary / series style rules / series world facts (when project is in a series)
5. Local Knowledge Engine context in this pack
6. Model general knowledge (lowest)
Do not let general knowledge override locked project or series terms.

## Critical Rules
- Translate meaning faithfully into the target language.
- Preserve tone, intent, ambiguity, and narrative viewpoint.
- Do not add facts, explanations, or plot not present in the source or supplied context.
- Do not omit meaningful content.
- Produce natural target-language prose according to the selected fidelity profile.
- Locked terminology has absolute priority over model guesses.
- Preserve stable paragraph IDs exactly as given in Source.
- Output no commentary outside the required protocol sections.
- Do not mention being an AI or explain translation choices.
- Use Local Context (characters, relationships, story state, terms) when present; do not contradict locked facts.
- Primary detected source language is contextual guidance — not every token belongs to that language.
- When the source contains another language: understand it in context.
- Translate natural-language foreign content into the target when appropriate.
- Preserve proper names, brands, URLs, code, and identifiers as non-translatable when appropriate.
- Follow locked Project Terms; do not "correct" foreign phrases without evidence from context or terms.
- Never translate or modify: paragraph IDs, URLs, file paths, code identifiers, markup control tokens, structured placeholders.
- Preserve exact numbers when the source requires numeric fidelity.
- Preserve user-locked strings exactly.
- Do not over-generalize — normal prose in the target language should read naturally.
- By default, adapt punctuation and quote style to the target language (targetProfile.quoteStyle, targetProfile.punctuationProfile).
- Unless a project rule explicitly requires preserving original source typography.
- Translation prose should normally use the target language's expected script.
- Exceptions: proper names, locked terms, foreign quotations intentionally preserved, code, and URLs.
- Exactly one output record per source paragraph ID.
- Translation text may use normal target-language punctuation inside the line.
- Because the parser is line-oriented: each translation MUST be one physical output line per ID.
- If the source contains internal line breaks, they were normalized before prompt building — do not invent new paragraph IDs.
- Do not repeat the source text in your response.
- Do not provide explanations or meta-commentary — protocol sections only.
- This reduces token usage and truncation risk.
- Balance accuracy and natural target-language readability.
- Preserve proper nouns via locked/active terms.
- Keep tone consistent with previous chapters.
- Simplified Chinese source: implicit subjects and aspect are common; do not over-explicitize.
- Treat idioms and chengyu by meaning; avoid literal calques unless locked terms require a form.
- Classical or cultivation titles: use locked Project Terms; do not freestyle readings.
- Segment names and titles per locked terms; do not merge or split han compounds arbitrarily.
- Source may omit subjects and rely on context; do not invent pronouns when identity is ambiguous.
- Preserve honorifics, speech level, and social distance cues implied in the source.
- Keep name order and segmentation consistent with locked Project Terms.
- Vietnamese target: dialogue must sound natural Vietnamese, not stiff source-syntax calques.
- Pronouns and forms of address should follow relationship memory (a_calls_b / b_calls_a).
- Prefer established Sino-Vietnamese (Hán-Việt) readings for names/terms when locked terms allow.
- Avoid English or Chinese sentence skeletons in Vietnamese output.
- Target typography (quoteStyle=curly): use curly quotation marks for dialogue.
- Target punctuation (punctuationProfile=western): follow Western punctuation conventions for Tiếng Việt.
- Source is CJK-dense: do not insert spaces inside names or terms unless the target language requires it.
- zh→vi: prefer established Hán-Việt (Sino-Vietnamese) readings for names and terms when locked terms allow.
- zh→vi: keep classical / cultivation titles consistent with Project Terms; do not freestyle Hán-Việt.
- zh-Hans→vi: source is Simplified Chinese; do not invent Traditional variants in the target.
- Keep locked names exact."
`;

exports[`TranslationPackBuilder snapshots > keeps balanced pack structure stable > full-prompt 1`] = `
"## Task
Source language:
Chinese (Simplified) / 简体中文 (zh-Hans)

Detected from source content.

Target language:
Vietnamese / Tiếng Việt (vi)

This is the required output language.

Translate:
Chinese (Simplified) / 简体中文 (zh-Hans) → Vietnamese / Tiếng Việt (vi)

Style: balanced
Range: chapter 451
Preserve every paragraph ID from Source exactly.
Use ONLY the Local Context sections below (ContextSelector from SQLite). Do not invent terms, characters, or plot.

## Knowledge Priority
If conflict:
1. This Translation Pack explicit instruction
2. HOT MEMORY (recent SQLite changes)
3. LOCKED PROJECT TERM
4. SERIES glossary / series style rules / series world facts (when project is in a series)
5. Local Knowledge Engine context in this pack
6. Model general knowledge (lowest)
Do not let general knowledge override locked project or series terms.

## Critical Rules
- Translate meaning faithfully into the target language.
- Preserve tone, intent, ambiguity, and narrative viewpoint.
- Do not add facts, explanations, or plot not present in the source or supplied context.
- Do not omit meaningful content.
- Produce natural target-language prose according to the selected fidelity profile.
- Locked terminology has absolute priority over model guesses.
- Preserve stable paragraph IDs exactly as given in Source.
- Output no commentary outside the required protocol sections.
- Do not mention being an AI or explain translation choices.
- Use Local Context (characters, relationships, story state, terms) when present; do not contradict locked facts.
- Primary detected source language is contextual guidance — not every token belongs to that language.
- When the source contains another language: understand it in context.
- Translate natural-language foreign content into the target when appropriate.
- Preserve proper names, brands, URLs, code, and identifiers as non-translatable when appropriate.
- Follow locked Project Terms; do not "correct" foreign phrases without evidence from context or terms.
- Never translate or modify: paragraph IDs, URLs, file paths, code identifiers, markup control tokens, structured placeholders.
- Preserve exact numbers when the source requires numeric fidelity.
- Preserve user-locked strings exactly.
- Do not over-generalize — normal prose in the target language should read naturally.
- By default, adapt punctuation and quote style to the target language (targetProfile.quoteStyle, targetProfile.punctuationProfile).
- Unless a project rule explicitly requires preserving original source typography.
- Translation prose should normally use the target language's expected script.
- Exceptions: proper names, locked terms, foreign quotations intentionally preserved, code, and URLs.
- Exactly one output record per source paragraph ID.
- Translation text may use normal target-language punctuation inside the line.
- Because the parser is line-oriented: each translation MUST be one physical output line per ID.
- If the source contains internal line breaks, they were normalized before prompt building — do not invent new paragraph IDs.
- Do not repeat the source text in your response.
- Do not provide explanations or meta-commentary — protocol sections only.
- This reduces token usage and truncation risk.
- Balance accuracy and natural target-language readability.
- Preserve proper nouns via locked/active terms.
- Keep tone consistent with previous chapters.
- Simplified Chinese source: implicit subjects and aspect are common; do not over-explicitize.
- Treat idioms and chengyu by meaning; avoid literal calques unless locked terms require a form.
- Classical or cultivation titles: use locked Project Terms; do not freestyle readings.
- Segment names and titles per locked terms; do not merge or split han compounds arbitrarily.
- Source may omit subjects and rely on context; do not invent pronouns when identity is ambiguous.
- Preserve honorifics, speech level, and social distance cues implied in the source.
- Keep name order and segmentation consistent with locked Project Terms.
- Vietnamese target: dialogue must sound natural Vietnamese, not stiff source-syntax calques.
- Pronouns and forms of address should follow relationship memory (a_calls_b / b_calls_a).
- Prefer established Sino-Vietnamese (Hán-Việt) readings for names/terms when locked terms allow.
- Avoid English or Chinese sentence skeletons in Vietnamese output.
- Target typography (quoteStyle=curly): use curly quotation marks for dialogue.
- Target punctuation (punctuationProfile=western): follow Western punctuation conventions for Tiếng Việt.
- Source is CJK-dense: do not insert spaces inside names or terms unless the target language requires it.
- zh→vi: prefer established Hán-Việt (Sino-Vietnamese) readings for names and terms when locked terms allow.
- zh→vi: keep classical / cultivation titles consistent with Project Terms; do not freestyle Hán-Việt.
- zh-Hans→vi: source is Simplified Chinese; do not invent Traditional variants in the target.
- Keep locked names exact.

## Active Characters
李逍遥 → Lý Tiêu Dao [protagonist] aliases=逍遥

## Relevant Relationships
李逍遥 → 赵灵儿 (friend) calls=灵儿/逍遥哥哥

## Current Story State
MC arrives at Qingyun.
{"location":{"place":"青云门"},"openPlots":["Who attacked the mountain?"]}

## Relevant World Facts
(none)

## Recent Context
@450 plot.mc_realm=Foundation Establishment

## Locked Terms
李逍遥 → Lý Tiêu Dao (PERSON) LOCKED

## Relevant Terms
青云门 → Thanh Vân Môn (SECT)

## Source
[C000451:P000001] 李逍遥走进青云门。
[C000451:P000002] 他看见赵灵儿站在山门前。

## Output Protocol
Output Protocol Version: 2

Return EXACTLY these sections in order. No Markdown fences.

<TRANSLATION>
[C000001:P000001] TARGET_LANGUAGE_TRANSLATION...
</TRANSLATION>

<TERM_DELTA>
[]
</TERM_DELTA>

<MEMORY_DELTA>
[]
</MEMORY_DELTA>

TRANSLATION rules:
- Exactly one physical output line per source paragraph ID; ID must match Source exactly.
- Text in the target language only; one line per ID (no embedded line breaks in output).
- Do not repeat source text. No commentary, explanations, or markdown fences outside tags.

TERM_DELTA rules:
- JSON array of discover|update|confirm objects only when this batch supports new/changed/confirmed terminology.
- Use [] when the batch has no such terms — do not manufacture entries merely to fill the array.
- When a proper noun / technique / place name is newly translated with confidence, emit discover.
- Compact fields: action, source, target, category, optional transliteration + transliterationSystem, confidence, notes.
- Do not emit editionId, sourceLanguage, or targetLanguage — the application attaches pair provenance at persist.
- transliteration is generic (pinyin, romaji, romanization per source policy); omit when unnecessary. Legacy alias: reading.

MEMORY_DELTA rules:
- JSON array of upsert|delete|relationship|story_state only for facts newly supported or changed in this batch.
- Use [] when nothing new — do not manufacture entries merely to fill the array.
- Do not assert unknown or ambiguous facts with high confidence.
- Prefer source-story facts in upsert values; do not store target-language prose as universal story facts.
- When a named character appears for the first time with clear evidence, upsert category "character" with object value linking canonical source identity; target rendering belongs in edition layer.
- relationship: language-neutral type/description/validFrom/validTo; aCallsB/bCallsA are edition-scoped forms of address.

General:
- Locked/active terms MUST be used exactly as given.
- Do not skip paragraph IDs. Do not invent IDs."
`;

exports[`TranslationPackBuilder snapshots > keeps balanced pack structure stable > hot-memory 1`] = `
"## Active Characters
李逍遥 → Lý Tiêu Dao [protagonist] aliases=逍遥

## Relevant Relationships
李逍遥 → 赵灵儿 (friend) calls=灵儿/逍遥哥哥

## Current Story State
MC arrives at Qingyun.
{"location":{"place":"青云门"},"openPlots":["Who attacked the mountain?"]}

## Relevant World Facts
(none)

## Recent Context
@450 plot.mc_realm=Foundation Establishment"
`;

exports[`TranslationPackBuilder snapshots > keeps balanced pack structure stable > task-header 1`] = `
"## Task
Source language:
Chinese (Simplified) / 简体中文 (zh-Hans)

Detected from source content.

Target language:
Vietnamese / Tiếng Việt (vi)

This is the required output language.

Translate:
Chinese (Simplified) / 简体中文 (zh-Hans) → Vietnamese / Tiếng Việt (vi)

Style: balanced
Range: chapter 451
Preserve every paragraph ID from Source exactly.
Use ONLY the Local Context sections below (ContextSelector from SQLite). Do not invent terms, characters, or plot."
`;
